# Bookmark-Manager

./: .env  .gitignore  Cargo.toml  README.md  bookmarks_with_tags.html
src/: main.rs
